# gwent

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci_test.yml  draft-pdf.yml
data/: ET_M_vs_z.npz  LISA_ESA_M_vs_z.npz  NANOGrav_11yr_M_vs_z.npz  aLIGO_M_vs_z.npz  ngIPTA_WN_M_vs_z.npz
docs/: Makefile  calcSNR_tutorial.rst  conf.py  gwent.rst  index.rst  installation.rst  make.bat  modules.rst  nb-rst.tpl  source_plot_tutorial.rst  strain_plot_tutorial.rst  usage.rst  waterfall_plot_tutorial.rst
docs/_static/notebooks/: Generate_Waterfall_Plots.ipynb  calcSNR_tutorial.ipynb  source_plot_tutorial.ipynb  strain_plot_tutorial.ipynb  waterfall_plot_tutorial.ipynb
docs/notebooks/: .gitignore
docs/pyplot/: waterfall.py
gwent/: __init__.py  binary.py  detector.py  snr.py  snrplot.py  utils.py  waveform.py
gwinc/: gwinc_matlab.py  io.py  precomp.py  struct.py
gwinc/ifo/Aplus/: __init__.py
gwinc/ifo/CE1/: __init__.py
gwinc/noise/: coatingthermal.py
paper/: paper.bib  paper.md
tests/: CalcSNR_example.ipynb  Generate_Waterfall_Plots.ipynb  PlotStrain_example.ipynb  __init__.py  test_SNR.py  test_calcSNR.py  test_gwent.py  test_strain.py  test_utils.py  test_waterfall.py
(+57 files in other folders)
